--- a/gambling-with-oracles/README.adoc
+++ b/gambling-with-oracles/README.adoc
@@ -1,1 +1,15 @@
+= Document Title
+:toc:
+:toc-placement!:
+
+toc::[]
+
 == Here we run.
+include::src/binary.sol[]
+
+[source,ruby]
+----
+puts ['AsciiDoc', 'GitHub', 'AsciiDoc on GitHub'].map {|item|
+  "I use #{item}!"
+} * "\n"
+----
