--- a/gambling-with-oracles/README.adoc
+++ b/gambling-with-oracles/README.adoc
@@ -1,7 +1,11 @@
-= Gambling with Oracles
-How to create a provably-fair high risk financial product with live data feeds provided by oracles.
+:toc:
+:toc-placement!:
 
 toc::[]
+
+= Gambling with Oracles
+
+How to create a provably-fair high risk financial product with live data feeds provided by oracles.
 
 == Introducing Binary Options
 
