--- a/gambling-with-oracles/README.adoc
+++ b/gambling-with-oracles/README.adoc
@@ -8,16 +8,19 @@ toc::[]
 
 == Introducing Binary Options
 
-This time, we gonna gamble. We will construct a financial product, more specifcally a binary option, http://www.investopedia.com/terms/e/europeanoption.asp[European style], cash-or-nothing. +
-This is a high risk product which is http://www.investopedia.com/terms/b/binary-option.asp["most likely traded over the Internet on platforms existing outside of regulations"], so https://en.wikipedia.org/wiki/Binary_option["the customer is betting against the broker, who is acting as a bucket shop."]
+This time, we gonna gamble. We will construct a financial product, more specifcally a binary option, European style, cash-or-nothing.
 
-In general, this means that https://en.wikipedia.org/wiki/Binary_option["because these platforms operate outside of regulations, investors are at greater risk of fraud"] and http://www.investopedia.com/terms/b/binary-option.asp["manipulation of price data to cause customers to lose is common"].
+Binary options are "a type of option in which the payoff is structured to be either a fixed amount of compensation if the option expires in the money, or nothing at all if the option expires out of the money" [http://www.investopedia.com/terms/b/binary-option.asp[1]], therefore cash-or-nothing. European style means the option "can only be exercised at the end of its life, at its maturity" [http://www.investopedia.com/terms/b/binary-option.asp[1]].
+ 
+This is a high risk product which is "most likely traded over the Internet on platforms existing outside of regulations" [http://www.investopedia.com/terms/b/binary-option.asp[1]], so "the customer is betting against the broker, who is acting as a bucket shop." [https://en.wikipedia.org/wiki/Binary_option[2]]
 
-So, in contrast to common regulated financial products we have a really comprehensible option, which is mostly valued as high-risk, just because there is a real clash of interest if the broker also evaluates the stock against the strike price and is assumed to manipulate this evaluation.
+In general, this means that "because these platforms operate outside of regulations, investors are at greater risk of fraud" [https://en.wikipedia.org/wiki/Binary_option[2]] and "manipulation of price data to cause customers to lose is common" [http://www.investopedia.com/terms/b/binary-option.asp[1]].
+
+So, in contrast to common regulated financial products we have a really comprehensible option, which is mostly valued as high-risk, because there is a real clash of interests if the broker also evaluates the stock against the strike price and thus is highly motivated to manipulate this evaluation.
 
 == Smart Contracts to the Rescue
 
-So, can smart contracts help here? You bet! The blockchain is trust-less, so you just don't have to trust anyone, be it broker or bucket shop or both, but you can just prove if everything's ok.
+So, can smart contracts help here? You bet! The blockchain is trust-less, so you just don't have to trust anyone, be it broker or bucket shop or both, but you can just prove if everything's ok. +
 If a smart contract guarantees you that you will get 195% if you predict correctly and 0% if not, this rule has to be implemented in the contract.
 
 == Meeting the Oracle
