--- a/gambling-with-oracles/README.adoc
+++ b/gambling-with-oracles/README.adoc
@@ -20,7 +20,8 @@ So, in contrast to common regulated financial products we have a really comprehe
 
 == Smart Contracts to the Rescue
 
-So, can smart contracts help here? You bet! The blockchain is trust-less, so you just don't have to trust anyone, be it broker or bucket shop or both, but you can just prove if everything's ok. +
+So, can smart contracts help here? You bet! The blockchain is trust-less, so you just don't have to trust anyone, be it broker or bucket shop or both, but you can just prove if everything's ok.
+
 If a smart contract guarantees you that you will get 195% if you predict correctly and 0% if not, this rule has to be implemented in the contract.
 
 == Meeting the Oracle
@@ -29,13 +30,13 @@ Given that we can trust the contract, it should be easy to implement a binary op
 
 After deploying the contract, you have 1 hour to call or put Ether on this condition: after this 1 hour offering period, it's rien ne va plus, no more call or puts are possible. At this point of time, the current value of the DAX is stored. After 1 hour the DAX is evaluated against the stored DAX value.
 
-If
-* the value is above or equal to the stored value, all calls are returned 195% of their investment, all puts lose all invested money
-* the value is above or equal to the stored value, all puts are returned 195% of their investment, all calls lose all invested money
+
+* if the value is above or equal to the stored value, all *calls* are returned 195% of their investment, all puts lose all invested money
+* if the value is below the stored value, all *puts* are returned 195% of their investment, all calls lose all invested money
 
 Sounds simple? It is!
 
-However, there is one problem. You can easily prove that the contract actually implements the described rules, but there are two problems: how does the contract know the DAX value? Contracts in Ethereum intetntionally cannot connect to the outside world, therefore the outside world has to call the contract and provide the necessary data. +
+However, there is one problem. You can easily prove that the contract actually implements the described rules, but there are two problems: how does the contract know the DAX value? Contracts in Ethereum intetntionally cannot connect to the outside world, therefore the outside world has to call the contract and provide the necessary data.
 
 == Let's gonna oraclize.it
 
